@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 - 2015 GraphicsMagick Group
+% Copyright (C) 2003 - 2016 GraphicsMagick Group
 % Copyright (C) 2003 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
 %
@@ -1224,10 +1224,12 @@ MagickExport void DestroyImage(Image *image)
   int
     destroy;
 
+  if (image == (Image *) NULL)
+    return;
+
   /*
     Dereference image.
   */
-  assert(image != (Image *) NULL);
   assert(image->signature == MagickSignature);
   destroy=False;
   LockSemaphoreInfo((SemaphoreInfo *) image->semaphore);
